--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,7 +178,7 @@
 </style>
 
 <main class="main">
-  <div class="content">
+  < class="content">
     <div class="left-side">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -228,7 +228,7 @@
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
+  <hr class="divider" aria-label="Divider"/>
     <div class="right-side">
       <div class="pill-group">
         @for (item of [
